fixed textarea height

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -185,7 +185,7 @@
 }
 textarea#renameProjectDocument {
 	width: 90%;
-	height: 100%;
+	height: auto;
 	border: 1px solid #ffff99;
 	resize: none;
 	outline: none;
