--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -17,6 +17,7 @@ body {
 	min-height: 100%;
 	left: 0;
 	margin: 0 0 0 -260px;
+	width: 260px;
 }
 .menu-right {
 	right: 0;
@@ -49,6 +50,7 @@ body {
 	cursor: pointer;
 	padding: 10px;
 	height: calc(100% / 3);
+	min-height: 178px;
 }
 .menu-item-left {
 	opacity:1;
@@ -71,7 +73,6 @@ body {
 .menu-left .content {
 	height: 100%;
 	min-height: 100%;
-	width: 260px;
 	padding-left: 20px;
 	padding-top: 20px;
 }
@@ -86,6 +87,26 @@ body {
 	font-size: 20px;
 	float: left;
 	cursor: pointer;
+}
+.menu-left-options {
+	background-color: #F2F3F4;
+	height: 100px;
+	width: inherit;
+	position: absolute;
+	border: 1px solid;
+	bottom: 0;
+}
+.options-bottom-buttons {
+	background-color: #231F20;
+	height: 25px;
+	width: inherit;
+}
+.options-bottom-buttons a {
+	color: #fff;
+	padding-left: 20px;
+	padding-right: 20px;
+	line-height: 25px;
+	text-decoration: underline;
 }
 
 .container {
