added animation for options

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -97,6 +97,11 @@ body {
 	bottom: 0;
 	z-index: 1;
 	margin-bottom: -100px;
+	transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	-o-transition: all 0.5s;
 }
 .menu-left-options.open {
 	margin-bottom: 0 !important;
