added the menu plugin from Allan, modified it to work better

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -130,11 +130,14 @@ body {
 }
 
 .editor {
-	background: #fff;
 	position: relative;
 	margin: 0 auto;
 	width: 800px;
 }
+.editor .toolbar-area {
+	height: 30px;
+}
+
 .menu-left ul li div .document {
 	padding: 0;
 }
