--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -90,13 +90,13 @@ body {
 }
 .menu-left-options {
 	background-color: #F2F3F4;
-	height: 100px;
+	height: 150px;
 	width: inherit;
 	position: absolute;
 	border: 2px solid #666;
 	bottom: 0;
 	z-index: 1;
-	margin-bottom: -100px;
+	margin-bottom: -150px;
 	transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	-ms-transition: all 0.5s;
@@ -291,4 +291,22 @@ textarea#renameProjectDocument {
 	-khtml-user-drag: none;
 	-webkit-user-drag: none;
 	user-drag: none;
+}
+
+.upload-box {
+	background: #F8F8F8;
+	border: 3px dashed #DDD;
+	width: inherit;
+	height: 60px;
+	text-align: center;
+	padding-top: 15px;
+	margin-top: 10px;
+}
+.upload-box.dragover {
+	border: 3px dashed #fff265;
+}
+.options-bottom-box p {
+	margin-top: 6px;
+	margin-bottom: 10px;
+	font-size: 90%;
 }
