--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -167,6 +167,7 @@ input:focus {
 }*/
 
 .main > section button {
+	outline: none;
 	border: none;
 	background: #ffff99;
 	color: #000;
@@ -176,10 +177,6 @@ input:focus {
 	cursor: pointer;
 	margin: 5px 0 0;
 	font-size: 0.8em;
-}
-
-.main > section button:hover {
-	background: #E6E680;
 }
 
 .main > section button.active {
