--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -1,6 +1,3 @@
-body {
-	background-color: #D1D2D4 !important;
-}
 .menu-left, .menu-right {
 	z-index: 1;
 	position: fixed;
@@ -327,4 +324,7 @@ textarea#renameProjectDocument {
 	margin-top: 6px;
 	margin-bottom: 10px;
 	font-size: 90%;
+}
+.selectedTab {
+	background-color: #F2F3F4;
 }
