--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -26,7 +26,7 @@ body, html { position: relative; font-size: 100%; padding: 0; margin: 0; }
 
 /* General Styling */
 body {
-	background: none #ececec;
+	background: none #F8F9F9;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	color: #666;
 	overflow-x: hidden
