--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -58,6 +58,10 @@
 	height: calc(100% / 3);
 	min-height: 178px;
 }
+.menu-item-left.documents {
+	padding-left: 20px;
+	padding-top: 20px;
+}
 .menu-item-left {
 	opacity:1;
 }
@@ -80,8 +84,6 @@
 	width: 100%;
 	height: 100%;
 	min-height: 100%;
-	padding-left: 20px;
-	padding-top: 20px;
 }
 .menu-right .content {
 	width: 200px;
@@ -328,3 +330,13 @@ textarea#renameProjectDocument {
 .selectedTab {
 	background-color: #F2F3F4;
 }
+.typo {
+	background-color: #fff;
+	height: 40px;
+}
+.typo.new {
+	border: 2px dashed #c6c6c6;
+	text-align: center;
+	line-height: 35px;
+}
+
