styling styles and fixing REST calls

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -364,6 +364,14 @@ li.typo p {
 .typo-children li {
 	background-color: #D6D6D6;
 	border-top: 2px solid #fff265;
-	border-bottom: 2px solid #fff265;
 	padding: 10px 0 10px 10px;
+}
+
+.style.new {
+	height: 40px;
+	text-align: center;
+}
+.style.new p {
+	padding: 0;
+	margin-left: -10px;
 }
