--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -129,6 +129,7 @@
 	margin-right: 20px;
 	line-height: 25px;
 	text-decoration: underline;
+	cursor: pointer;
 }
 .documents-options-bottom-buttons a:hover {
 	color: #999;
