added stylesets and styles option arrows

--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -192,7 +192,7 @@
 	color: #fff265;
 }
 
-.projectDocument .projectDocument-options-show {
+.projectDocument .projectDocument-options-show, .styleset-options-show {
 	position: absolute;
 	top: 5px;
 	right: 5px;
@@ -205,6 +205,13 @@
 	-o-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
 }
+.style-options-show {
+	position: absolute;
+	right: 5px;
+	border-radius: 2px;
+	padding: 4px 2px;
+	cursor: pointer;
+}
 .projectDocument:hover .projectDocument-options-show, .projectDocument .projectDocument-options-show.active {
 	background-color: #eee;
 	-webkit-transition: all 0.5s ease-in-out;
@@ -212,14 +219,17 @@
 	-o-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
 }
-.projectDocument .projectDocument-options-show .arrow {
+.arrow {
 	width: 0;
 	height: 0;
 	border-left: 5px solid transparent;
 	border-right: 5px solid transparent;
 	border-top: 5px solid #fff;
 }
-.projectDocument-options {
+.styleset-options-show .arrow {
+	border-top: 5px solid #000;
+}
+.projectDocument-options, .styleset-options, .style-options {
 	position: absolute;
 	top: 20px;
 	right: 0;
@@ -230,24 +240,27 @@
 	border-radius: 5px;
 	border: 1px solid #eee;
 }
+.style-options {
+	top: inherit;
+}
 .projectDocument-options-header {
 	border-bottom: 1px solid #eee;
 	text-align: center;
 	padding: 5px 0 10px;
 }
-.projectDocument-options-hide {
+.projectDocument-options-hide, .styleset-options-hide, .style-options-hide {
 	position: absolute;
 	top: 5px;
 	right: 10px;
 	cursor: pointer;
 }
-.projectDocument-options-menupoint {
+.projectDocument-options-menupoint, .styleset-options-menupoint, .style-options-menupoint {
 	cursor: pointer;
 	margin: 2px -10px;
 	padding: 5px 15px;
 	text-transform: capitalize;
 }
-.projectDocument-options-menupoint.first {
+.projectDocument-options-menupoint.first, .styleset-options-menupoint.first, .style-options-menupoint.first {
 	margin-top: 10px;
 }
 .projectDocument-options-menupoint:hover {
@@ -380,9 +393,9 @@ li.typo p {
 	margin-left: -10px;
 }
 .cke_floatingtools {
-	position: absolute;
+	position: fixed;
 	z-index: 1;
-	left: -350px;
+	left: 50px;
 	bottom: -210px;
 	width: 259px;
 	padding: 5px 0 0 6px;
