--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -142,7 +142,9 @@
 	border: none;
 }
 .stylesets-options-bottom-buttons a {
-	margin-left: 90px;
+	padding-left: 90px;
+	border: none;
+	width: 100%;
 }
 .documents-options-bottom-buttons a:hover, .stylesets-options-bottom-buttons a:hover {
 	color: #999;
