--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -423,6 +423,80 @@ li.typo p {
 	bottom: 0 !important;
 }
 
+.left-menu-divider {
+	display: block;
+	clear: left;
+	border-bottom: 1px solid #efefef;
+	margin-bottom: 8px;
+	padding-top: 8px;
+}
+.left-menu-options {
+	display: block;
+	text-align: center;
+}
+.left-menu-options-parameters div {
+	display: none;
+}
+.left-menu-options-parameters div.expanded {
+	display: block;
+}
+.left-menu-icons {
+	display: block;
+	text-align: center;
+}
+.left-menu-button {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	padding: 5px 0;
+	border: 1px solid #fff56c;
+	cursor: default;
+	text-align: center;
+	cursor: pointer;
+}
+.left-menu-box {
+	display: inline-block;
+	width: 100%;
+	padding: 5px 10px;
+	border: 1px solid #efefef;
+	cursor: default;
+	text-align: left;
+	cursor: pointer;
+}
+.left-menu-parameter-margin {
+	margin-top: 10px;
+}
+.left-menu-box.inputfield {
+	position: relative;
+	width: calc(100% - 36px);
+	padding: 0;
+}
+.left-menu-box.inputfield input {
+	background: none white;
+	width: 100%;
+	height: 28px;
+}
+.left-menu-box.inputfield input.show-info {
+	padding-right: 40px;
+	text-align: right;
+}
+.left-menu-box.inputfield .extra-info {
+	position: absolute;
+	top: 5px;
+	right: 10px;
+	color: #ccc;
+}
+.left-menu-box.inputfield input:focus {
+	outline:none;
+}
+.left-menu-box .option {
+	display: block;
+}
+
+.left-menu-close-item {
+	color: #cc0000;
+}
+
 .insertOption {
 	position: relative;
 	margin: 0 10px 10px 0;
