--- a/public/create/stylesets/Typographic Design Templates/extravaganza-color.css
+++ b/public/create/stylesets/Typographic Design Templates/extravaganza-color.css
@@ -12,113 +12,191 @@
 800 = heavy
 900 = black*/
 
-/*COURIER PRIME*/
+/*SOURCE CODE PRO*/
 
 @font-face {
-	font-family:"Courier Prime";
+	font-family:"Source Code Pro";
+	font-style:normal;
+	font-weight:200;
+	src : url("../Fonts/sourcecodeproextralight.otf");
+}
+
+@font-face {
+	font-family:"Source Code Pro";
+	font-style:normal;
+	font-weight:300;
+	src : url("../Fonts/sourcecodeprolight.otf");
+}
+
+@font-face {
+	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:400;
-	src : url("../Fonts/courierprime.ttf");
+	src : url("../Fonts/sourcecodeproregular.otf");
 }
 
 @font-face {
-	font-family: "Courier Prime";
-	font-style:italic;
-	font-weight:400;
-	src : url("../Fonts/courierprimeitalic.ttf");
+	font-family:"Source Code Pro";
+	font-style:normal;
+	font-weight:600;
+	src : url("../Fonts/sourcecodeprosemibold.otf");
 }
 
 @font-face {
-	font-family: "Courier Prime";
+	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:700;
-	src : url("../Fonts/courierprimebold.ttf");
+	src : url("../Fonts/sourcecodeprobold.otf");
 }
 
 @font-face {
-	font-family: "Courier Prime";
+	font-family:"Source Code Pro";
+	font-style:normal;
+	font-weight:900;
+	src : url("../Fonts/sourcecodeproblack.otf");
+}
+
+/*CRIMSON*/
+
+@font-face {
+	font-family:"Crimson";
+	font-style:normal;
+	font-weight:400;
+	src : url("../Fonts/crimsonregular.ttf");
+}
+
+@font-face {
+	font-family: "Crimson";
+	font-style:italic;
+	font-weight:400;
+	src : url("../Fonts/crimsonitalic.ttf");
+}
+
+@font-face {
+	font-family: "Crimson";
+	font-style:normal;
+	font-weight:600;
+	src : url("../Fonts/crimsonsemibold.ttf");
+}
+
+@font-face {
+	font-family: "Crimson";
+	font-style:italic;
+	font-weight:600;
+	src : url("../Fonts/crimsonsemibolditalic.ttf");
+}
+
+@font-face {
+	font-family: "Crimson";
+	font-style:normal;
+	font-weight:700;
+	src : url("../Fonts/crimsonbold.ttf");
+}
+
+@font-face {
+	font-family: "Crimson";
 	font-style:italic;
 	font-weight:700;
-	src : url("../Fonts/courierprimebolditalic.ttf");
+	src : url("../Fonts/crimsonbolditalic.ttf");
+}
+
+/*AUTOUR ONE*/
+
+@font-face {
+	font-family: "Autour One";
+	font-style:normal;
+	font-weight:400;
+	src : url("../Fonts/autouroneregular.ttf");
 }
 
 /*STYLES*/
 /*Name: Heading 1*/
 h1 {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Autour One", sans-serif;
 	font-style:normal;
 	font-weight:700;
-	text-transform: uppercase;
-	font-size:3.5em;
+	text-align: right;
+	text-transform: uppercase;	
+	font-size:4em;
 	line-height:1.35;
-	color:#000000;
-	margin:2em 0 0 0;
+	color:#B50000;
+	margin:1.5em 0 0 0;
 }
 
 /*Name: Heading 2*/
 h2 {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Autour One", sans-serif;
 	font-style:normal;
 	font-weight:700;
-	font-size:3em;
+	text-align: right;
+	text-transform: uppercase;
+	font-size:3.5em;
 	line-height:1.38;
-	color:#000000;
-	margin:2em 0 0 0;
+	color:#B50000;
+	margin:1.5em 0 0 0;
 }
 
 /*Name: Heading 3*/
 h3 {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Autour One", sans-serif;
 	font-style:normal;
 	font-weight:700;
-	font-size:2.4em;
+	text-align: right;
+	text-transform: uppercase;
+	font-size:2.5em;
 	line-height:1.44;
-	color:#000000;
-	margin:2em 0 0 0;
+	color:#B50000;
+	margin:1.5em 0 0 0;
 }
 
 /*Name: Heading 4*/
 h4 {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Autour One", sans-serif;
 	font-style:normal;
 	font-weight:700;
+	text-align: right;
+	text-transform: uppercase;
 	font-size:2em;
 	line-height:1.45;
-	color:#000000;
-	margin:2em 0 0 0;
+	color:#B50000;
+	margin:1.5em 0 0 0;
 }
 
 /*Name: Heading 5*/
 h5 {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Autour One", sans-serif;
 	font-style:normal;
 	font-weight:700;
+	text-align: right;
+	text-transform: uppercase;
 	font-size:1.6em;
 	line-height:1.53;
-	color:#000000;
-	margin:2em 0 0 0;
+	color:#B50000;
+	margin:1.5em 0 0 0;
 }
 
 /*Name: Heading 6*/
 h6 {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Autour One", sans-serif;
 	font-style:normal;
 	font-weight:700;
-	font-size:1.2em;
+	text-align: right;
+	text-transform: uppercase;
+	font-size:1.3em;
 	line-height:1.56;
-	color:#000000;
-	margin:2em 0 0 0;
+	color:#B50000;
+	margin:1.5em 0 0 0;
 }
 
 
 /*Name: Paragraph*/
 p {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Crimson", serif;
 	font-style:normal;
 	font-weight:400;
 	font-size:1em;
-	line-height: 1.5;
-	color:#000000;
+	line-height: 1.56;
+	color:#B50000;
 	margin: 1em 0 0 0;
 	hyphens: auto;
 	-moz-hyphens: auto;
@@ -127,26 +205,27 @@ p {
 
 /*Name: Quote*/
 blockquote {
-	quotes: "\203A" "\2039" "\2018" "\2019";
-	font-family: "Courier Prime", Courier, monospace;
-	font-style: italic;
-	font-weight: 700;
-	text-align: left;
+	quotes: "\201C" "\201D" "\2018" "\2019";
+	font-family: "Autour One", sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	text-align: right;
 	font-size:1.4em;
 	line-height:1.42;
-	color:#000000;
+	color:#ffffff;
+	background:#B50000;
 /*Border-shorthand is WIDTH STYLE COLOR*/
 	border:0px solid #000000;
-	padding:0em;
+	padding:1em;
 /*Margin-left and right is defined in %, as it then becomes relative to width, which is important for responsive design to e.g. mobile phones.*/
 /*Here margin-top is defined as 1.2em instead of 1.5em - it is an approximation of <p> 1em (or rem)*/
-	margin:1.5em 30% 1.5em 10%;
+	margin:1.5em 0 1.5em 40%;
 	page-break-inside:avoid;
 }
 
 /*Name: Speech*/
 q { 
-	quotes: "\203A" "\2039" "\2018" "\2019";
+	quotes: "\201C" "\201D" "\2018" "\2019";
 	font-style:italic;
 }
 
@@ -162,33 +241,33 @@ a {
 a:link { color: #000000; text-decoration:underline; }
 a:visited { color: #000000; text-decoration:underline; }
 /*I think for templates the disappearing link is asking for trouble :)*/
-a:hover { color: #000000; text-decoration:underline; }
-a:active { color: #000000; text-decoration:underline; }
+a:hover { color: #000000; text-decoration:none; }
+a:active { color: #000000; text-decoration:none; }
 
 
 /*Name: Code*/
 .code {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Source Code Pro", monospace;
 	font-style:normal;
 	font-weight:400;
 	font-size:1em;
 	text-indent:0;
 	color:#ffffff;
 	background:#000000;
-	margin:1.5em 40% 0em 0em;
+	margin:1.5em 0 0em 40%;
 	padding:1em;
 }
 
 
 /*Name: Caption*/
 figcaption {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Crimson", serif;
 	font-style:italic;
 	font-weight:400;
-	font-size:0.7em;
+	font-size:0.8em;
 	line-height:1.64;
-	color:#000000;
-	margin:1em 20% 0 0;
+	color:#B50000;
+	margin:1em 0 0 20%;
 }
 /*Epub2-fallback css*/
 /*p.figcaption {
@@ -206,18 +285,20 @@ figcaption {
 	font-style:italic;
 	font-weight:400;
 	line-height: 1.3;
-	color:#000000;
+	color:#B50000;
 	text-align:center;
 	text-indent:0;
 }
 
 /*Name: Title*/
 .titlepageTitle {
-	font-size:3em;
+	font-family: "Autour One", sans-serif;
+	font-size:2.5em;
+	text-transform: uppercase;
 	font-style:normal;
-	font-weight: 700;
+	font-weight: 400;
 	line-height: 1.5;
-	color:#000000;
+	color:#B50000;
 	text-align:center;
 	text-indent:0;
 }
@@ -225,10 +306,11 @@ figcaption {
 /*Name: Table of content*/
 .toc-item {
 	font-size: 1.2em;
+	text-align: right;
 	font-style:normal;
-	font-weight: 700;
+	font-weight: 600;
 	line-height:1.42;
-	color:#000000;
+	color:#B50000;
 
 }
 
@@ -246,25 +328,25 @@ figcaption {
 /*Insert: List*/
 ol {
 	list-style:decimal;
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Crimson", serif;
 	font-style:normal;
 	font-weight:400;
-	font-size:1.1em;
+	font-size:1em;
 	line-height: 1.56;
-	color:#000000;
+	color:#B50000;
 	margin: 1em 0 0 0;
 	hyphens: auto;
 	-moz-hyphens: auto;
 	-webkit-hyphens: auto;
 }
 ul {
-	list-style:square;
-	font-family: "Courier Prime", Courier, monospace;
+	list-style:disc;
+	font-family: "Crimson", serif;
 	font-style:normal;
 	font-weight:400;
-	font-size:1.1em;
+	font-size:1em;
 	line-height: 1.56;
-	color:#000000;
+	color:#B50000;
 	margin: 1em 0 0 0;
 	hyphens: auto;
 	-moz-hyphens: auto;
@@ -274,7 +356,7 @@ ul {
 /*Insert: Image*/
 img {
 	width: 80%;
-	margin:0 20% 0 0;
+	margin: 0 0 0 20%;
 	height: auto;
 	page-break-inside:avoid;
 }
@@ -283,27 +365,25 @@ img {
 
 /*Name: Table heading*/
 th {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Crimson", serif;
 	font-style:normal;
-	font-weight:700;
-	font-size:1.1em;
+	font-weight:600;
+	font-size:1em;
 	line-height: 1.56;
-	color:#ffffff;
-	background-color: #000000;
-	border: 3px solid #000000;
+	color:#000000;
+	border: 2px solid #000000;
 	padding: .5em;
 }
 
 /*Name: Table cells*/
 td {
-	font-family: "Courier Prime", Courier, monospace;
+	font-family: "Crimson", serif;
 	font-style:normal;
 	font-weight:400;
-	font-size:1.1em;
+	font-size:1em;
 	line-height: 1.56;
-	color:#000000;
-	background-color: #ffffff;
-	border: 3px solid #000000;
+	color:#B50000;
+	border: 2px solid #B50000;
 	padding: .5em;
 }
 
@@ -311,7 +391,7 @@ table {
 	table-layout: auto;
 	border-collapse: collapse;
 	border-spacing: 0;
-	margin:0 20% 0 0;
+	margin:0 0 0 auto;
 /*Already in figure:
 	page-break-inside:avoid;*/
 }
