--- a/public/create/stylesets/book-color.css
+++ b/public/create/stylesets/book-color.css
@@ -18,42 +18,42 @@
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:200;
-	src : url("../Fonts/sourcecodeproextralight.otf");
+	src : url("/Fonts/sourcecodeproextralight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:300;
-	src : url("../Fonts/sourcecodeprolight.otf");
+	src : url("/Fonts/sourcecodeprolight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:400;
-	src : url("../Fonts/sourcecodeproregular.otf");
+	src : url("/Fonts/sourcecodeproregular.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:600;
-	src : url("../Fonts/sourcecodeprosemibold.otf");
+	src : url("/Fonts/sourcecodeprosemibold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:700;
-	src : url("../Fonts/sourcecodeprobold.otf");
+	src : url("/Fonts/sourcecodeprobold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:900;
-	src : url("../Fonts/sourcecodeproblack.otf");
+	src : url("/Fonts/sourcecodeproblack.otf");
 }
 
 /*JUNICODE*/
@@ -62,28 +62,28 @@
 	font-family:"Junicode";
 	font-style:normal;
 	font-weight:400;
-	src : url("../Fonts/junicode.ttf");
+	src : url("/Fonts/junicode.ttf");
 }
 
 @font-face {
 	font-family: "Junicode";
 	font-style:italic;
 	font-weight:400;
-	src : url("../Fonts/junicodeitalic.ttf");
+	src : url("/Fonts/junicodeitalic.ttf");
 }
 
 @font-face {
 	font-family: "Junicode";
 	font-style:normal;
 	font-weight:700;
-	src : url("../Fonts/junicodebold.ttf");
+	src : url("/Fonts/junicodebold.ttf");
 }
 
 @font-face {
 	font-family: "Junicode";
 	font-style:italic;
 	font-weight:700;
-	src : url("../Fonts/junicodebolditalic.ttf");
+	src : url("/Fonts/junicodebolditalic.ttf");
 }
 
 /*OPEN SANS*/
@@ -92,70 +92,70 @@
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:300;
-	src : url("../Fonts/opensanslight.ttf");
+	src : url("/Fonts/opensanslight.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:300;
-	src : url("../Fonts/opensanslightitalic.ttf");
+	src : url("/Fonts/opensanslightitalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:400;
-	src : url("../Fonts/opensansregular.ttf");
+	src : url("/Fonts/opensansregular.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:400;
-	src : url("../Fonts/opensansitalic.ttf");
+	src : url("/Fonts/opensansitalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:600;
-	src : url("../Fonts/opensanssemibold.ttf");
+	src : url("/Fonts/opensanssemibold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:600;
-	src : url("../Fonts/opensanssemibolditalic.ttf");
+	src : url("/Fonts/opensanssemibolditalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:700;
-	src : url("../Fonts/opensansbold.ttf");
+	src : url("/Fonts/opensansbold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:700;
-	src : url("../Fonts/opensansbolditalic.ttf");
+	src : url("/Fonts/opensansbolditalic.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:normal;
 	font-weight:800;
-	src : url("../Fonts/opensansextrabold.ttf");
+	src : url("/Fonts/opensansextrabold.ttf");
 }
 
 @font-face {
 	font-family: "Open Sans";
 	font-style:italic;
 	font-weight:800;
-	src : url("../Fonts/opensansextrabolditalic.ttf");
+	src : url("/Fonts/opensansextrabolditalic.ttf");
 }
 
 /*STYLES*/
@@ -251,11 +251,11 @@ blockquote {
 	font-size:1.4em;
 	line-height:1.42;
 	color:#CD7400;
-/*Border-shorthand is WIDTH STYLE COLOR*/
+
 	border:0px solid #000000;
 	padding:0em;
 /*Margin-left and right is defined in %, as it then becomes relative to width, which is important for responsive design to e.g. mobile phones.*/
-/*Here margin-top is defined as 1.2em instead of 1.5em - it is an approximation of <p> 1em (or rem)*/
+
 	margin:1.5em 20% 1.5em 20%;
 	page-break-inside:avoid;
 }
@@ -277,7 +277,7 @@ a {
 
 a:link { color: #000000; text-decoration:underline; }
 a:visited { color: #000000; text-decoration:underline; }
-/*I think for templates the disappearing link is asking for trouble :)*/
+
 a:hover { color: #CD7400; text-decoration:underline; }
 a:active { color: #CD7400; text-decoration:underline; }
 
