--- a/public/create/stylesets/future-bw.css
+++ b/public/create/stylesets/future-bw.css
@@ -18,42 +18,42 @@
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:200;
-	src : url("../Fonts/sourcecodeproextralight.otf");
+	src : url("/Fonts/sourcecodeproextralight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:300;
-	src : url("../Fonts/sourcecodeprolight.otf");
+	src : url("/Fonts/sourcecodeprolight.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:400;
-	src : url("../Fonts/sourcecodeproregular.otf");
+	src : url("/Fonts/sourcecodeproregular.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:600;
-	src : url("../Fonts/sourcecodeprosemibold.otf");
+	src : url("/Fonts/sourcecodeprosemibold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:700;
-	src : url("../Fonts/sourcecodeprobold.otf");
+	src : url("/Fonts/sourcecodeprobold.otf");
 }
 
 @font-face {
 	font-family:"Source Code Pro";
 	font-style:normal;
 	font-weight:900;
-	src : url("../Fonts/sourcecodeproblack.otf");
+	src : url("/Fonts/sourcecodeproblack.otf");
 }
 
 /*ROBOTO*/
@@ -62,84 +62,84 @@
 	font-family: "Roboto";
 	font-style:normal;
 	font-weight:100;
-	src : url("../Fonts/robotothin.ttf");
+	src : url("/Fonts/robotothin.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:italic;
 	font-weight:100;
-	src : url("../Fonts/robotothinitalic.ttf");
+	src : url("/Fonts/robotothinitalic.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:normal;
 	font-weight:300;
-	src : url("../Fonts/robotolight.ttf");
+	src : url("/Fonts/robotolight.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:italic;
 	font-weight:300;
-	src : url("../Fonts/robotolightitalic.ttf");
+	src : url("/Fonts/robotolightitalic.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:normal;
 	font-weight:400;
-	src : url("../Fonts/robotoregular.ttf");
+	src : url("/Fonts/robotoregular.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:italic;
 	font-weight:400;
-	src : url("../Fonts/robotoitalic.ttf");
+	src : url("/Fonts/robotoitalic.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:normal;
 	font-weight:600;
-	src : url("../Fonts/robotomedium.ttf");
+	src : url("/Fonts/robotomedium.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:italic;
 	font-weight:600;
-	src : url("../Fonts/robotomediumitalic.ttf");
+	src : url("/Fonts/robotomediumitalic.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:normal;
 	font-weight:700;
-	src : url("../Fonts/robotobold.ttf");
+	src : url("/Fonts/robotobold.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:italic;
 	font-weight:700;
-	src : url("../Fonts/robotobolditalic.ttf");
+	src : url("/Fonts/robotobolditalic.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:normal;
 	font-weight:900;
-	src : url("../Fonts/robotoblack.ttf");
+	src : url("/Fonts/robotoblack.ttf");
 }
 
 @font-face {
 	font-family: "Roboto";
 	font-style:italic;
 	font-weight:900;
-	src : url("../Fonts/robotoblackitalic.ttf");
+	src : url("/Fonts/robotoblackitalic.ttf");
 }
 
 /*STYLES*/
@@ -240,11 +240,11 @@ blockquote {
 	font-size:1.3em;
 	line-height:1.42;
 	color:#848482;
-/*Border-shorthand is WIDTH STYLE COLOR*/
+
 	border:2px solid #848482;
 	padding:2em;
 /*Margin-left and right is defined in %, as it then becomes relative to width, which is important for responsive design to e.g. mobile phones.*/
-/*Here margin-top is defined as 1.2em instead of 1.5em - it is an approximation of <p> 1em (or rem)*/
+
 	margin:1.5em 30% 1.5em 30%;
 	page-break-inside:avoid;
 }
@@ -266,7 +266,7 @@ a {
 
 a:link { color: #000000; text-decoration:underline; }
 a:visited { color: #000000; text-decoration:underline; }
-/*I think for templates the disappearing link is asking for trouble :)*/
+
 a:hover { color: #000000; text-decoration:underline; }
 a:active { color: #000000; text-decoration:none; }
 
