--- a/public/create/stylesets/pleasant-bw.css
+++ b/public/create/stylesets/pleasant-bw.css
@@ -18,7 +18,7 @@
 	font-family:"Gabriela";
 	font-style:normal;
 	font-weight:400;
-	src : url("../stylesets/Fonts/gabrielaregular.ttf");
+	src : url("/stylesets/Fonts/gabrielaregular.ttf");
 }
 
 /*SOURCE SANS PRO*/
@@ -27,84 +27,84 @@
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:200;
-	src : url("../stylesets/Fonts/sourcesansproextralight.otf");
+	src : url("/stylesets/Fonts/sourcesansproextralight.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:200;
-	src : url("../stylesets/Fonts/sourcesansproextralightitalic.otf");
+	src : url("/stylesets/Fonts/sourcesansproextralightitalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:300;
-	src : url("../stylesets/Fonts/sourcesansprolight.otf");
+	src : url("/stylesets/Fonts/sourcesansprolight.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:300;
-	src : url("../stylesets/Fonts/sourcesansprolightitalic.otf");
+	src : url("/stylesets/Fonts/sourcesansprolightitalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:400;
-	src : url("../stylesets/Fonts/sourcesansproregular.otf");
+	src : url("/stylesets/Fonts/sourcesansproregular.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:400;
-	src : url("../stylesets/Fonts/sourcesansproitalic.otf");
+	src : url("/stylesets/Fonts/sourcesansproitalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:600;
-	src : url("../stylesets/Fonts/sourcesansprosemibold.otf");
+	src : url("/stylesets/Fonts/sourcesansprosemibold.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:600;
-	src : url("../stylesets/Fonts/sourcesansprosemibolditalic.otf");
+	src : url("/stylesets/Fonts/sourcesansprosemibolditalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:700;
-	src : url("../stylesets/Fonts/sourcesansprobold.otf");
+	src : url("/stylesets/Fonts/sourcesansprobold.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:700;
-	src : url("../stylesets/Fonts/sourcesansprobolditalic.otf");
+	src : url("/stylesets/Fonts/sourcesansprobolditalic.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:normal;
 	font-weight:900;
-	src : url("../stylesets/Fonts/sourcesansproblack.otf");
+	src : url("/stylesets/Fonts/sourcesansproblack.otf");
 }
 
 @font-face {
 	font-family:"Source Sans Pro";
 	font-style:italic;
 	font-weight:900;
-	src : url("../stylesets/Fonts/sourcesansproblackitalic.otf");
+	src : url("/stylesets/Fonts/sourcesansproblackitalic.otf");
 }
 
 /*UBUNTU MONO*/
@@ -113,28 +113,28 @@
 	font-family:"Ubuntu Mono";
 	font-style:normal;
 	font-weight:400;
-	src : url("../stylesets/Fonts/ubuntumonoregular.ttf");
+	src : url("/stylesets/Fonts/ubuntumonoregular.ttf");
 }
 
 @font-face {
 	font-family:"Ubuntu Mono";
 	font-style:italic;
 	font-weight:400;
-	src : url("../stylesets/Fonts/ubuntumonoregularitalic.ttf");
+	src : url("/stylesets/Fonts/ubuntumonoregularitalic.ttf");
 }
 
 @font-face {
 	font-family:"Ubuntu Mono";
 	font-style:normal;
 	font-weight:700;
-	src : url("../stylesets/Fonts/ubuntumonobold.ttf");
+	src : url("/stylesets/Fonts/ubuntumonobold.ttf");
 }
 
 @font-face {
 	font-family:"Ubuntu Mono";
 	font-style:italic;
 	font-weight:700;
-	src : url("../stylesets/Fonts/ubuntumonobolditalic.ttf");
+	src : url("/stylesets/Fonts/ubuntumonobolditalic.ttf");
 }
 
 /*STYLES*/
@@ -229,11 +229,11 @@ blockquote {
 	font-size:1.3em;
 	line-height:1.42;
 	color:#7F7E7E;
-/*Border-shorthand is WIDTH STYLE COLOR*/
+
 	border:0px solid #000000;
 	padding:0em;
 /*Margin-left and right is defined in %, as it then becomes relative to width, which is important for responsive design to e.g. mobile phones.*/
-/*Here margin-top is defined as 1.2em instead of 1.5em - it is an approximation of <p> 1em (or rem)*/
+
 	margin:1.5em 30% 1.5em 20%;
 	page-break-inside:avoid;
 }
@@ -256,7 +256,7 @@ a {
 
 a:link { color: #7F7E7E; text-decoration:underline; }
 a:visited { color: #7F7E7E; text-decoration:underline; }
-/*I think for templates the disappearing link is asking for trouble :)*/
+
 a:hover { color: #7F7E7E; text-decoration:underline; }
 a:active { color: #ffffff; text-decoration:none; }
 
